--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--sweetAlert link  -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +18,19 @@
     <button onclick="clickB()">click Here</button>
     <br><br>
     <button onclick="ask()">click Here</button>
+    <br> <br> <br>
 
+    <button onclick="func()">Animation click Alert</button>
+    <button onclick="func2()">Animation click Alert2</button>
+    <button onclick="func3()">Animation click Alert3</button>
+    <button onclick="func4()">Animation click Alert4</button>
+    <br><br>
+    <button onclick="func5()">Animation click Alert5</button>
+    <br> <br>
+    <button onclick="func6()">Animation click Alert6</button>
+    <br><br>
+    <button onclick="func7()">Animation click Alert7</button>
+<!-- js link  -->
     <script src="index.js"></script>
 </body>
 </html>
